--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+
+  },
+  "devDependencies": {
+    "@rgrannell/pulp": "^8.2.0",
     "@rgrannell/testing": "^8.2.0",
     "ts-node": "^8.3.0",
     "tsconfig-paths": "^3.8.0",
