--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@rgrannell/index": "^8.2.0",
     "@rgrannell/pulp": "^8.2.0",
     "@rgrannell/testing": "^8.2.0",
+    "execa": "^2.0.3",
     "ts-node": "^8.3.0",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.5.3"
