--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node pulpfile.js test",
-    "test:watch": "find . -name '*.ts' | entr -s 'npm test'"
+    "test:watch": "find . -name '*.ts' | entr -s 'npm test'",
+    "play:watch": "find . -name '*.ts' | entr -s 'node_modules/.bin/tsc && node dist/src/index.js'"
   },
   "author": "",
   "license": "MIT",
