--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node pulpfile.js test",
+    "test": "node_modules/.bin/tsc && node dist/tests/runner.js",
     "test:watch": "find . -name '*.ts' | entr -s 'node_modules/.bin/tsc && node dist/src/index.js'",
     "play:watch": "find . -name '*.ts' | entr -s 'node_modules/.bin/tsc && node dist/tests/runner.js'"
   },
